# ExamBOT

./: .env  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  group1  group2  pyproject.toml
alembic/: env.py
alembic/versions/: 5b39123c7437_init_migration.py  72b70e96ea88_init_migration.py  ee37e6b451a6_init_migration.py
app/: bot_instance.py  main.py  settings.py
app/handlers/: handlers.py
app/repository/: CRUD.py  database.py  models.py
app/src/Exam/: exam_logic.py  form_questions.py
app/src/selenium_parcer/: parcer.py  selenium_instance.py
app/yml_files/: questions.yml
bot/: Dockerfile
bot/app/: bot_instance.py  config.py  main.py  states.py
bot/app/handlers/: data_collector_handler.py  inline_keyboard_handlers.py  main_handlers.py  timer_handler.py  timer_handler_text.py  under_keyboard_handler.py
bot/app/keyboards/: Keyboard_Manager.py  inline_keyboard_handlers.py  keyboards.yml  keyboards_builder.py  main_menu.yml  under_keyboard_handler.py
bot/app/logger/: logger_file.py
bot/app/migrations/: env.py
bot/app/repositories/: CRUD.py  database.py  models.py
bot/app/services/: report.py
bot/app/text_for_handlers/: main_handler_text_files.py  timer_handler_text.py
bot/app/utilities/: delete_msg.py
bot/app/yml_files/: questions.yml
core/: config.py
docs/: conf.py  index.rst  timer.rst
src/: bot_instance.py  main.py
src/app/: __init__.py  app.py
src/app/routes/: students.py
src/repository/: CRUD.py  database.py  models.py
src/src/Exam/: exam_logic.py  time_constants.py
src/src/selenium_parcer/: parcer.py  utils.py
src/yml_files/: links.yml
static/: script.js  styles.css
templates/: students.html
tests/: crud_tests.py  exam_timer_preparations.py  telegram_test_for_bot.py  test_keyboards_builder.py
web/: Dockerfile
web/app/: main.py
(+13 files in other folders)
